# backend/src/auth/dto/email-auth.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, MaxLength, MinLength } from 'class-validator';
+
+export class EmailAuthDto {
+  @ApiProperty({ example: 'user@example.com' })
+  @IsEmail()
+  email!: string;
+
+  @ApiProperty({ minLength: 8, maxLength: 128 })
+  @MinLength(8)
+  @MaxLength(128)
+  password!: string;
+}
